--- a/clean_shares_backend/Gemfile
+++ b/clean_shares_backend/Gemfile
@@ -25,6 +25,8 @@ gem "puma", ">= 5.0"
 # gem "bcrypt", "~> 3.1.7"
 gem 'bcrypt'
 gem 'jwt'
+gem 'rack-cors'
+
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
